feat: Create User and Task domain models

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-spring.application.name=backend
+# PostgreSQL Database Connection
+spring.datasource.url=jdbc:postgresql://localhost:5432/klaroboard_db
+spring.datasource.username=user
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA/Hibernate Settings
+# This is the magic part: It automatically creates/updates database tables based on your Java code.
+spring.jpa.hibernate.ddl-auto=update
+
+# This is helpful for debugging, as it shows the SQL queries in the console.
+spring.jpa.show-sql=true
