--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "tailwind:init": "tailwindcss init -p"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@tailwindcss/postcss": "^4.1.11",
     "autoprefixer": "^10.4.21",
     "axios": "^1.10.0",
